--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         #capitalizedWords {
-            height: 65px; /* изменен размер */
-            margin-top: -9px; /* уменьшен верхний отступ */
+            height: 65px; /* ГЁГ§Г¬ГҐГ­ГҐГ­ Г°Г Г§Г¬ГҐГ° */
+            margin-top: -9px; /* ГіГ¬ГҐГ­ГјГёГҐГ­ ГўГҐГ°ГµГ­ГЁГ© Г®ГІГ±ГІГіГЇ */
         }
         #inputText, #outputText {
             height: 300px;
@@ -33,7 +33,7 @@
             cursor: pointer;
             background-color: #4CAF50;
             color: white;
-            width: 322px; /* изменен размер */
+            width: 322px; /* ГЁГ§Г¬ГҐГ­ГҐГ­ Г°Г Г§Г¬ГҐГ° */
         }
         #copyButton:hover, #updateButton:hover {
             background-color: #45a049;
@@ -74,7 +74,7 @@ const germanPrepositionsAndArticles = ["der", "die", "das", "ein", "eine", "eine
 "in", "uber", "unter", "vor", "zwischen", "neben", "durch", "fur", "gegen", "ohne", "mit", "bei", "seit", "nach", "wahrend", "entlang", 
 "au?erhalb", "innerhalb", "bis", "um", "zwischen", "gegenuber"];
 
-const russianPrepositionsAndArticles = ["в", "на", "из", "под", "за", "перед", "после", "между", "при", "о", "об", "о вокруг", "к", "по", "от", "до", "через", "внутри", "среди", "у", "с"];
+const russianPrepositionsAndArticles = ["Р°", "РІ", "РЅР°", "РїРѕРґ", "Р·Р°", "РїРµСЂРµРґ", "РјРµР¶РґСѓ", "РЅР°Рґ", "РѕРєРѕР»Рѕ", "Рѕ", "РѕС‚", "РїСЂРё", "С‡РµСЂРµР·", "СЃСЂРµРґРё", "РІРѕРєСЂСѓРі", "СЃ", "Р±РµР·", "РєСЂРѕРјРµ", "РїРѕСЃР»Рµ", "РёР·-Р·Р°", "РІРґРѕР»СЊ", "РІРЅСѓС‚СЂРё", "СЃРЅР°СЂСѓР¶Рё", "Сѓ"];
 
 const italianPrepositionsAndArticles = ["il", "lo", "la", "i", "gli", "le", "un", "uno", "una", "un'", "a", "con", "da", "di", "in", "su", "per", "tra", "fra", "con", "su", "per", "tra", "fra"];
 
@@ -128,3 +128,5 @@ copyButton.addEventListener('click', function() {
     </script>
 </body>
 </html>
+
+
